# fileidentification

./: .gitignore  CLAUDE.md  Dockerfile  README.md  appconfig.toml  chain.py  cleanup.py  d_requirements.txt  fidr.sh  identify.py  justfile  pyproject.toml  remote.py  requirements.txt  update.py
conf/: droidsig2json.py  models.py  policies.json  policies.py  settings.py
fileidentification/: filehandling.py  helpers.py  models.py  output.py  policies.py  rendering.py  update_signatures.py
fileidentification/conf/: fmt2ext.json  models.py  policies.py  settings.py  update_signatures.py
fileidentification/defenitions/: constants.py  models.py
fileidentification/definitions/: constants.py  models.py  settings.py
fileidentification/parser/: parser.py
fileidentification/policies/: policies.py
fileidentification/tasks/: console_output.py  conversion.py  inspection.py  os_tasks.py  policies.py
fileidentification/wrappers/: converter.py  ffmpeg.py  homebrew_packeges.py  imagemagick.py  wrappers.py
testdata/: negative-audio-timestamps.avi  te 2>1& st.avi  testpoliciesWithoutAvi.json
